--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
         android:layout_marginEnd="292sp"
         android:layout_marginRight="292sp"
         android:text="소식"
-        android:textSize="18sp"
+        android:textColor="#050505"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.018"
@@ -160,7 +161,8 @@
         android:layout_marginEnd="292sp"
         android:layout_marginRight="292sp"
         android:text="최근 소식"
-        android:textSize="18sp"
+        android:textColor="#000000"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
