--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="409dp"
-        android:layout_height="151dp"
-        android:layout_marginBottom="188dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:layout_width="419dp"
+        android:layout_height="98dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/tabbar" />
 
@@ -36,9 +35,9 @@
         android:id="@+id/loginicon"
         android:layout_width="52sp"
         android:layout_height="52sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16sp"
-        android:layout_marginRight="16sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/loginicon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -181,7 +180,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
