--- a/app/src/main/res/layout/activity_information_word.xml
+++ b/app/src/main/res/layout/activity_information_word.xml
@@ -26,8 +26,7 @@
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab4" />
+            android:layout_height="wrap_content" />
     </com.google.android.material.tabs.TabLayout>
 
     <ImageView
@@ -175,37 +174,28 @@
         app:layout_constraintStart_toEndOf="@+id/button3" />
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/viewpager1"
         android:layout_width="225dp"
         android:layout_height="156dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
+        android:layout_marginStart="158dp"
+        android:layout_marginLeft="158dp"
         android:layout_marginTop="204dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.805"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="225dp"
+            android:layout_height="156dp"
+            android:layout_marginTop="204dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
     </androidx.viewpager.widget.ViewPager>
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="219dp"
-        android:layout_marginEnd="309dp"
-        android:layout_marginRight="309dp"
-        android:text="퀴즈 복습"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
